--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,1 +1,5 @@
-@import './reset.css'
+@import './reset.css';
+div::-webkit-scrollbar{width: 5px;height:5px;background-color:#82c9ff;}/*定义滚动条轨道 内阴影+圆角*/
+div::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 6px #e7e7e7;border-radius: 10px; background-color:#e7e7e7;}/*定义滑块 内阴影+圆角*/
+div::-webkit-scrollbar-thumb{border-radius: 10px;-webkit-box-shadow: inset 0 0 6px #cbe7fc;background-color:#82c9ff;}
+
